--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,18 @@
     --basic-light:#888888;
     --basic-extra-light: #EEEEEE;
     --basic-white: #ffffff;
+    --gray:#B4B9BB;
+    --white-gray:#D7DCDE;
     --red-light: #FB565A;
     --red: #E74246;
     --red-dark: #D7373B;
-   
+    --green-light: #00CA74;
+    --green-med: #00BC6C;
+    --green-dark: #00AA62;
+    --yellow-light: #EFC849;
+    --yellow-med: #EAB534;
+    --yellow-dark:#E5A722;
+    --shadow-1:rgba(0, 1, 1, 0.1);
 }
 
 /* Global */
@@ -25,6 +33,11 @@ color: var(--basic-dark);
 background-color: var(--basic-white);
 }
 
+.visually-hidden {
+display: none; 
+}
+
+
 a {
     text-decoration: none;
   }
@@ -33,7 +46,19 @@ a {
     max-width: 100%;
     height: auto;
   }
-  
+
+
+  .main-header-logo:hover {
+  background-color: var(--basic-extra-light);
+  opacity: 0.7;
+}
+
+
+  .main-header-logo:focus {
+    background-color: var(--basic-extra-light);
+    opacity: 0.3;
+  }
+
   .main-header {
     background-color: var(--basic-extra-light);
   }
@@ -49,9 +74,13 @@ a {
     list-style: none;
   }
 
-  h1 {
-   background-color: var(--basic-extra-light);
-  }
+  .navigation-item {
+    border-bottom: 2px solid var(--red-light);
+    width: 61px;
+    height: 2px;
+    line-height:1;
+     }
+
 /* User navigation */
 
 
@@ -83,7 +112,7 @@ a {
   text-align:left;
 }
 
-.feature-item h3 {
+.feature-title {
   font-weight: 500;
   font-size: 55px;
   line-height: 55px;
@@ -101,7 +130,7 @@ a {
   line-height: 24px;
 }
 
-.index-columns strong {
+.about-lead {
   font-size: 45px;
   line-height: 45px;
   font-weight: 500;
@@ -109,7 +138,7 @@ a {
   text-align:left;
 }
 
-.index-columns h3 {
+.about-title {
   font-size: 16px;
   line-height: 24px;
   text-transform: uppercase;
@@ -119,14 +148,19 @@ a {
 
  /* percents */
 
-.index-columns h4 {
+.percents-title {
   font-size: 45px;
   line-height: 64px;
   font-weight: 700;
   color: var(--basic-black);
 }
- .accuracy {
+ .accuracy-title {
   color: var(--basic-black);
+  font-size: 16px;
+  line-height: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align:left;
  }
 .sign {
   font-size: 26px;
@@ -211,51 +245,51 @@ line-height: 18px;
     width: 160px;
     height: 50px;
     opacity: 0.3;
-    box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+    box-shadow: inset 0px 3px 0px var(--shadow-1);
   }
   
   .services-button-green {
-    background-color:#00CA74;
+    background-color: var(--green-light);
     width: 160px;
     height: 50px;
   }
   .services-button-green:hover {
-    background-color:#00BC6C;
+    background-color: var(--green-med);
     width: 160px;
     height: 50px;
   }
   .services-button-green:focus {
-    background-color:#00AA62;
+    background-color: var(--green-dark);
     width: 160px;
     height: 50px;
     opacity: 0.3;
-    box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+    box-shadow: inset 0px 3px 0px var(--shadow-1);
   }
 
 
   .services-button-yellow {
-    background-color:#EFC849;
+    background-color: var(--yellow-light);
     width: 160px;
     height: 50px;
   }
   .services-button-yellow:hover {
-    background-color:#EAB534;
+    background-color: var(--yellow-med);
     width: 160px;
     height: 50px;
   }
   .services-button-yellow:focus {
-    background-color:#E5A722;
+    background-color: var(--yellow-dark);
     width: 160px;
     height: 50px;
     opacity: 0.3;
-    box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+    box-shadow: inset 0px 3px 0px var(--shadow-1);
   }
   /* services */
 
   .services-list {
     list-style: none;
   }
-  .services h3 {
+  .services-title {
   font-size: 24px;
   line-height: 30px;
   text-transform: uppercase;
@@ -363,18 +397,18 @@ line-height: 18px;
   border: 2px;
   font-size: 16px;
   line-height: 18px;
-  border: 2px solid #D7DCDE;
-  color: #444444;
+  border: 2px solid var(--white-gray);
+  color: var(--basic-dark-gray);  
   opacity: 0.5;
 }
 
 .letter-form input,textarea:hover {
-  border-color: #B4B9BB;
+  border-color:  var(--gray);
 }
 
 .letter-form input,textarea:focus {
-  border-color: #000000;
-  color: #444444;
+  border-color: var(--basic-black);
+  color: var(--basic-dark-gray);  
   opacity: 1;
   border: 2px;
 }
@@ -419,16 +453,27 @@ line-height: 18px;
   }
 
 
-
-
-
-
   /* footer-social */
+  .social-list {
+    list-style: none;
+  }
+  
+  .social-button {
 
+  }
 
 .round {
-  border: none;
+  /* border: none;
   border-radius: 50%;
-  background: linear-gradient(0deg, #E1E1E1, #E1E1E1), #FFFFFF;
   padding: 40px;
+  color:lightblue; */
+}
+
+
+.circle {
+  border-radius: 50%;
+  background: var(--basic-light-gray);
+  width: 81px;
+  height: 81px;
+  display: inline-block;
 }
