--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --basic-light:#888888;
     --basic-extra-light: #EEEEEE;
     --basic-white: #ffffff;
+    --basic-white-03: rgba(255, 255, 255, 0.3)
     --gray:#B4B9BB;
     --white-gray:#D7DCDE;
     --red-light: #FB565A;
@@ -209,7 +210,7 @@ line-height: 18px;
     background-color: var(--red-dark);
     width: 240px;
     height: 50px;
-    opacity: 0.3;
+    color: 
   }
 
   .contacts-button {
@@ -227,7 +228,7 @@ line-height: 18px;
     background-color: var(--red-dark);
     width: 219px;
     height: 50px;
-    opacity: 0.3;
+    color: var(--basic-white-03);
   }
 
   .services-button-red {
@@ -425,12 +426,12 @@ line-height: 18px;
   opacity:1;
   background-color: var(--basic-white);
 }
+
 .modal-close:focus {
   color: var(--red-light);
   opacity: 0.1;
   background-color: var(--basic-white);
 }
-
 
 .send {
   background-color: var(--red-light);
@@ -462,12 +463,8 @@ line-height: 18px;
 
   }
 
-.round {
-  /* border: none;
-  border-radius: 50%;
-  padding: 40px;
-  color:lightblue; */
-}
+
+
 
 
 .circle {
