--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,21 @@
 :root {
   --basic-black: #000000;
   --basic-dark: #283136;
+  --basic-black-03: rgb(0, 0, 0, 0.3);
+  --basic-black-06: rgb(0, 0, 0, 0.6);
+  --basic-black-015: rgba(0, 0, 0, 0.15);
   --basic-dark-gray: #444444;
   --basic-gray: #666666;
   --basic-light-gray: #E1E1E1;
   --basic-light: #888888;
   --light-black: #4D4D4D;
+  --soft-gray:#D5D5D5;
+  --med-light-gray: #DFDFDF;
   --basic-extra-light: #EEEEEE;
   --basic-white: #ffffff;
   --basic-white-03: rgba(255, 255, 255, 0.3);
   --gray: #B4B9BB;
+  --extra-light-gray: #DBDBDB;
   --white-gray: #D7DCDE;
   --red-light: #FB565A;
   --red: #E74246;
@@ -85,7 +91,6 @@ img {
 .navigation-item {
   border-bottom: 2px solid var(--red-light);
   width: 61px;
-  height: 2px;
   line-height: 1;
   margin: 0;
 }
@@ -460,4 +465,149 @@ img {
   height: 81px;
   display: inline-block;
   margin: 0;
+}
+
+.main-title {
+  font-size: 55px;
+  line-height: 55px;
+  font-weight: 500;
+  color: var(--basic-black);
+  margin: 0;
+}
+
+.filter-title {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 700;
+  color: var(--basic-black);
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.filter-name {
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0; 
+}
+
+.filter-show-button {
+  width: 260px;
+  padding: 16px 20px;
+  color: var(--basic-black);
+  background-color: var(--basic-extra-light);
+}
+
+.filter-show-button:hover {
+  background-color: var(--med-light-gray);
+}
+
+.filter-show-button:active {
+  color: var(--basic-black-03);
+  background-color: var(--soft-gray);
+  box-shadow: inset 0 3px 0 var(--shadow-1);
+}
+
+.filter-type {
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--basic-black-03);
+}
+
+
+.filter-type:hover {
+  color: var(--basic-black-06);
+}
+
+.filter-type:active {
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--basic-black);
+}
+
+.example-list {
+  list-style: none;
+}
+
+.example-text {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  color: var(--basic-gray);
+  margin: 0;
+}
+
+.example-button:active {
+  color: var(--basic-white);
+}
+
+.example-link a {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 700;
+  color: var(--basic-black);
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.example-link a:hover {
+  color: var(--red-light);
+}
+
+.example-link a:active {
+  color: var(--basic-black-03);
+}
+
+.pagination-list {
+  list-style: none;
+}
+
+.pagination-button {
+  color: var(--basic-black);
+  background-color: var(--basic-extra-light);
+  border: none;
+  width: 50px;
+  padding: 13px 15px;
+}
+
+.pagination-button:hover {
+  background-color: var(--med-light-gray);
+}
+
+.pagination-button:active {
+  color: var(--basic-black-03);
+  background-color: var(--soft-gray);
+  box-shadow: inset 0 3px 0 var(--shadow-1);
+}
+
+.pagination-button:disabled {
+  color: var(--basic-black);
+  background-color: var(--basic-white);
+  border: 3px solid var(--extra-light-gray);
+}
+
+.button-next {
+  width: 260px;
+}
+
+.select-button {
+  color: var(--light-black);
+  background-color: var(--basic-white);
+}
+
+.price-range {
+  background-color: var(--basic-extra-light);
+  color: var(--basic-white);
+  box-shadow: Offset 0 2px var(--basic-black-015);
+}
+
+.filter-price-text {
+font-size: 16px;
+line-height: 22px;
+text-transform: uppercase;
+}
+
+.filter-price input {
+  background-color: var(--basic-extra-light);
+  border: none;
+  border-radius: 3px;
 }
