--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,24 @@
 }
 
 /* Global */
-body {
+.page-body {
+  min-width: 1440px;
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
   color: var(--basic-dark);
   background-color: var(--basic-white);
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
+}
+
+.page {
+  height: 100%;
 }
 
 .visually-hidden {
@@ -56,6 +67,10 @@ a {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.main-header-logo {
+  justify-self: left;
 }
 
 .main-header-logo:hover,
@@ -79,13 +94,26 @@ img {
   font-weight: 500;
   color: var(--basic-black);
   background-color: var(--basic-extra-light);
-  margin: 0;
+}
+
+.main-navigation-wrapper {
+  width: 1440px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.container {
+  width: 1440px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .site-navigation {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: grid;
+  grid-template-columns: auto;
 }
 
 .navigation-item {
@@ -165,6 +193,9 @@ img {
   background-repeat: no-repeat, repeat;
   font-size: 16px;
   line-height: 24px;
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 149px;
 }
 
 .about-lead {
@@ -178,6 +209,15 @@ img {
 
 .about-text {
   margin: 0;
+}
+
+.about-info {
+  margin-bottom: 73px;
+}
+
+.stats {
+  margin-bottom: 74px;
+  margin-top: 39px;
 }
 
 .about-title {
@@ -286,7 +326,15 @@ img {
 /* services */
 
 .services-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 100px;
   list-style: none;
+}
+
+.services-item {
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .services-title {
@@ -299,7 +347,9 @@ img {
 }
 
 .services-text {
-  margin: 0;
+  margin-bottom: 32px;
+  margin-top: 16px;
+  text-align: left;
 }
 
 /* clients */
@@ -310,6 +360,8 @@ img {
 
 .clients-list {
   list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .clients-link {
@@ -372,6 +424,8 @@ img {
   font-size: 16px;
   line-height: 22px;
   color: var(--basic-dark-gray);
+  margin-bottom: 74px;
+  margin-top: 75px;
 }
 
 /* Appointment */
@@ -452,10 +506,18 @@ img {
 }
 
 /* footer-social */
+
+.footer-info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 139px;
+}
+
 .social-list {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  margin-top: 68px;
+  margin-bottom: 68px;
+  padding: 9px;
 }
 
 .social-item {
@@ -507,6 +569,8 @@ img {
   background-color: var(--soft-gray);
   box-shadow: inset 0 3px 0 var(--shadow-1);
 }
+
+.footer-container {}
 
 .sort-type {
   font-size: 14px;
