--- a/css/style.css
+++ b/css/style.css
@@ -474,6 +474,12 @@ img {
   padding-bottom: 37px;
 }
 
+.contacts-square {
+  background-color: white;
+  background-size: 319px 308px;
+  background-repeat: no-repeat;
+}
+
 /* footer-social */
 
 .footer-info {
@@ -609,6 +615,12 @@ img {
   background-color: var(--basic-extra-light);
 }
 
+.filter {
+  width: 260px;
+  margin-right: 99px;
+  padding-top: 55px;
+}
+
 .filter-title {
   font-size: 18px;
   line-height: 30px;
@@ -616,6 +628,14 @@ img {
   color: var(--basic-black);
   text-transform: uppercase;
   margin: 0;
+}
+
+.grid-title {
+  margin-top: 54px;
+}
+
+.excellence-title {
+  margin-top: 43px;
 }
 
 .filter-name {
@@ -629,6 +649,7 @@ img {
   padding: 16px 20px;
   color: var(--basic-black);
   background-color: var(--basic-extra-light);
+  margin-top: 48px;
 }
 
 .filter-show-button:hover {
@@ -637,11 +658,32 @@ img {
 
 .filter-show-button:active {
   color: var(--basic-black-03);
-  background-color: var(--soft-gray);
+  background-color: var(--soft-gray);ß
   box-shadow: inset 0 3px 0 var(--shadow-1);
 }
 
-.footer-container {}
+.sort {
+  display: flex;
+  align-items: center;
+  padding-bottom: 48px;
+  justify-content: center;
+  padding-top: 55px;
+}
+
+.sort-title {
+  margin: 0;
+  padding: 0; 
+  margin-left: 41px;
+  margin-right: 266px;
+}
+
+.sort-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
 
 .sort-type {
   font-size: 14px;
@@ -660,10 +702,35 @@ img {
   color: var(--basic-black);
 }
 
-.example-list {
-  list-style: none;
+.type-price {
+  margin-left: 266px;
+  margin-right: 25px;
 }
 
+.type-type {
+  margin-right: 26px;
+}
+
+.type-name {
+  margin-right: 47px;
+}
+.example-list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0;
+  padding: 0;
+}
+
+.example-item {
+  margin-left: 41px;
+  margin-bottom: 31px;
+}
+
+.example-link {
+  margin: 0;
+  padding: 0;
+}
 .example-text {
   font-size: 16px;
   line-height: 18px;
@@ -695,6 +762,13 @@ img {
 
 .pagination-list {
   list-style: none;
+  display: flex;
+  align-items: center;
+  padding-bottom: 60px;
+}
+
+.pagination-item {
+  margin-right: 11px;
 }
 
 .pagination-link {
@@ -737,23 +811,6 @@ img {
   padding: 0;
 }
 
-.sort-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.example-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.example-link {
-  margin: 0;
-  padding: 0;
-}
-
 .select-button {
   color: var(--light-black);
   background-color: var(--basic-white);
@@ -780,7 +837,5 @@ img {
 /* Grid for pages */
 
 .page-catalog {
-  display: grid;
-  grid-template-columns: 360px 360px 360px;
-  column-gap: 40px;
+  display: flex;
 }
